# lazydatabricks

./: .gitignore  CHANGELOG.md  README.md  REQUIREMENTS-TUI.md  pyproject.toml
docs/: web-requirements.md
src/lazybricks/: __init__.py  app.py
src/lazybricks/api/: __init__.py  client.py  clusters.py  guard.py  health.py  jobs.py  logs.py  pipelines.py  warehouses.py
src/lazybricks/extensions/: __init__.py  base.py
src/lazybricks/extensions/billing/: __init__.py  api.py  models.py  queries.py  screen.py
src/lazybricks/models/: __init__.py  config.py  health.py  job.py  pipeline.py  warehouse.py
src/lazybricks/tui/: __init__.py  app.py  theme.py
src/lazybricks/tui/screens/: __init__.py  base.py  clusters.py  config.py  home.py  jobs.py  logs.py  pipelines.py  warehouses.py
src/lazybricks/tui/widgets/: __init__.py  footer_bar.py  header.py  help_overlay.py  status_bar.py
src/lazydatabricks/: __init__.py  app.py
src/lazydatabricks/api/: __init__.py  client.py  clusters.py  guard.py  health.py  jobs.py  logs.py  pipelines.py  warehouses.py
src/lazydatabricks/extensions/: __init__.py  base.py
src/lazydatabricks/extensions/billing/: __init__.py  api.py  screen.py
src/lazydatabricks/models/: __init__.py  cluster.py  config.py  health.py  job.py  pipeline.py
src/lazydatabricks/tui/: __init__.py  app.py  theme.py  theme_config.py
src/lazydatabricks/tui/screens/: __init__.py  base.py  clusters.py  config.py  home.py  jobs.py  logs.py  pipelines.py  warehouses.py
tests/: conftest.py
tests/api/: test_guard.py
tests/tui/: __init__.py  test_armed_mode.py  test_clusters_screen.py  test_header.py  test_home_screen.py  test_keybindings.py
(+6 files in other folders)
